[tool.poetry]
name = "lenski-py-lab"
version = "0.1.0"
description = "A Python package for lenski-py-lab"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "lenski_py_lab", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"